# ProxyChannels

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  build_linux.sh  build_mingw.cmd  build_vs2017_amd64.cmd  build_vs2019_amd64.cmd  build_vs2022_amd64.cmd  mingwenv.cmd  proxy.xml  proxy.xml~  readme.docx  readme.txt
cmake/: FindBoost.cmake  PlatformSpecific.cmake  ProjectBoostLibraries.cmake
logclient/: CMakeLists.txt  logclient.cpp  logclient.h
logtest/: CMakeLists.txt  main.cpp
monitor/: CMakeLists.txt  main.cpp
oscar/: CMakeLists.txt  flap_builder.cpp  flap_parser.cpp  flap_parser.h  proto.cpp  proto.h  snac.h  tlv.h
proxy/: CMakeLists.txt  actor.cpp  actor.h  channel.cpp  channel.h  configurator.cpp  configurator.h  console.cpp  console.h  etf_logger_adapter.cpp  etf_logger_adapter.h  log_adaptor.cpp  log_adaptor.h  log_channel.cpp  log_channel.h  logger.cpp  logger.h  manager.cpp  manager.h  manager_adaptor.cpp  manager_adaptor.h  netloggeradapter.cpp  netloggeradapter.h  oscar_logger_adapter.cpp  oscar_logger_adapter.h  proxy.cpp  proxy.h  raw_logger_adapter.cpp  raw_logger_adapter.h  signals.cpp  signals.h  sink.cpp  sink.h  stdinc.h  stream_logger_adapter.cpp  stream_logger_adapter.h  tcpserver.cpp  tcpserver.h  tcpserver_child.cpp  tcpserver_child.h  (+4 more)
proxy/slogger/boost_logger/: logger.cpp  logger.h
proxy/slogger/oscar_logger/: logger.cpp  logger.h  sink.cpp  sink.h
utils/: CMakeLists.txt  lockqueue.h  logbuilder.cpp  logbuilder.h  strace_exception.cpp  timestamp.cpp  timestamp.h
